--- a/about.html
+++ b/about.html
@@ -6,10 +6,12 @@
     <title>Pixel Phantoms | About</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/home-gsap.css">
     <link rel="stylesheet" href="css/back-to-top.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="hacker-theme">
 
 <header>
     <nav class="navbar">
