--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Phantoms | Contact</title>
     <link rel="stylesheet" href="css/contact.css"> 
+    <link rel="stylesheet" href="css/home-gsap.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="hacker-theme">
 
 <header>
     <nav class="navbar">
